<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Presentation.GameOverFragment"
    android:background="@color/background_violetly_while">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">


            <ImageView
                android:id="@+id/iv_sticker"
                android:layout_width="256dp"
                android:layout_height="256dp"
                tools:src="@drawable/game_over_lose"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_verdict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Поражение"
                android:textSize="32sp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_sticker"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corr_ans_count"
                app:layout_constraintTop_toBottomOf="@id/tv_verdict"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/text_minor"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_correct_ans_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12/24"
                app:layout_constraintTop_toBottomOf="@id/tv_verdict"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/text_minor"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corr_ans_percent"
                app:layout_constraintTop_toBottomOf="@id/tv_correct_ans_count"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/text_minor"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_correct_ans_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12/24"
                app:layout_constraintTop_toBottomOf="@id/tv_correct_ans_count"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/text_minor"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_game_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/try_again"
                android:textColor="@color/button_text_dark_navy"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_correct_ans_percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>