<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Presentation.GameFragment"
    android:background="@color/background_violetly_while">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_level"
                tools:text="00:00"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/tv_sum"
                android:layout_width="128dp"
                android:layout_height="128dp"
                app:layout_constraintTop_toBottomOf="@id/tv_timer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="1000"
                android:layout_marginTop="64dp"
                android:textSize="32sp"
                android:background="@drawable/circle_background"
                android:backgroundTint="@color/sum_background_miku"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_term"
                android:layout_width="96dp"
                android:layout_height="96dp"
                app:layout_constraintTop_toBottomOf="@id/tv_sum"
                app:layout_constraintEnd_toStartOf="@id/tv_plus"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="7"
                android:layout_marginTop="8dp"
                style="@style/term_option_style"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginEnd="4dp"
                />

            <TextView
                android:id="@+id/tv_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="6dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_term"
                app:layout_constraintEnd_toStartOf="@id/tv_hidden"
                app:layout_constraintStart_toEndOf="@id/tv_term"
                app:layout_constraintTop_toBottomOf="@id/tv_sum"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_hidden"
                android:layout_width="96dp"
                android:layout_height="96dp"
                app:layout_constraintTop_toBottomOf="@id/tv_sum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_plus"
                android:text="@string/que"
                android:layout_marginTop="8dp"
                android:textSize="32sp"
                android:background="@drawable/round_rectangle_background"
                android:backgroundTint="@color/term_background_camo"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginStart="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corr_ans_count"
                app:layout_constraintTop_toBottomOf="@id/tv_term"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/text_minor"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_correct_ans_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12/24"
                app:layout_constraintTop_toBottomOf="@id/tv_term"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/text_minor"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corr_ans_percent"
                app:layout_constraintTop_toBottomOf="@id/tv_correct_ans_count"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/text_minor"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_correct_ans_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12/24"
                app:layout_constraintTop_toBottomOf="@id/tv_correct_ans_count"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/text_minor"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/variant_1"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@drawable/round_rectangle_background"
                android:backgroundTint="@color/term_background_camo"
                app:layout_constraintTop_toBottomOf="@id/tv_correct_ans_percent"
                android:layout_marginTop="24dp"
                tools:text="боль"
                style="@style/term_option_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/variant_2"
                app:layout_constraintHorizontal_chainStyle="spread"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/variant_2"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@drawable/round_rectangle_background"
                android:backgroundTint="@color/term_background_camo"
                app:layout_constraintTop_toBottomOf="@id/tv_correct_ans_percent"
                android:layout_marginTop="24dp"
                tools:text="боль"
                style="@style/term_option_style"
                app:layout_constraintEnd_toStartOf="@id/variant_3"
                app:layout_constraintStart_toEndOf="@id/variant_1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/variant_3"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@drawable/round_rectangle_background"
                android:backgroundTint="@color/term_background_camo"
                app:layout_constraintTop_toBottomOf="@id/tv_correct_ans_percent"
                android:layout_marginTop="24dp"
                tools:text="боль"
                style="@style/term_option_style"
                app:layout_constraintStart_toEndOf="@id/variant_2"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/variant_4"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@drawable/round_rectangle_background"
                android:backgroundTint="@color/term_background_camo"
                app:layout_constraintTop_toBottomOf="@id/variant_2"
                android:layout_marginTop="24dp"
                tools:text="боль"
                style="@style/term_option_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/variant_2"
                app:layout_constraintHorizontal_chainStyle="spread"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/variant_5"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@drawable/round_rectangle_background"
                android:backgroundTint="@color/term_background_camo"
                app:layout_constraintTop_toBottomOf="@id/variant_2"
                android:layout_marginTop="24dp"
                tools:text="боль"
                style="@style/term_option_style"
                app:layout_constraintEnd_toStartOf="@id/variant_3"
                app:layout_constraintStart_toEndOf="@id/variant_1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/variant_6"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@drawable/round_rectangle_background"
                android:backgroundTint="@color/term_background_camo"
                app:layout_constraintTop_toBottomOf="@id/variant_2"
                android:layout_marginTop="24dp"
                tools:text="боль"
                style="@style/term_option_style"
                app:layout_constraintStart_toEndOf="@id/variant_2"
                app:layout_constraintEnd_toEndOf="parent"
                />









        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>